ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  selector:
    app: ghost
  type: NodePort
  ports:
  - protocol: TCP
    port: 2368
    nodePort: 30204
  externalIPs:
    - 159.89.171.14
